src/objects/daily__c.object
<CustomObject>
    <fields>
        <fullName>enddate__c</fullName>
        <label>结束日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>kftask__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>库房任务</label>
        <referenceTo>Storemission__c</referenceTo>
        <relationshipLabel>日报</relationshipLabel>
        <relationshipName>kftask</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>remark__c</fullName>
        <label>备注</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>服务请求</label>
        <referenceTo>servicerequest__c</referenceTo>
        <relationshipLabel>日报</relationshipLabel>
        <relationshipName>OPkK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>startdate__c</fullName>
        <label>开始日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>train__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>培训记录</label>
        <referenceTo>trainmanagement__c</referenceTo>
        <relationshipLabel>日报</relationshipLabel>
        <relationshipName>JEG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>validnum__c</fullName>
        <label>有效人天</label>
        <precision>15</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>weekly__c</fullName>
        <label>周报</label>
        <referenceTo>Weekly__c</referenceTo>
        <relationshipLabel>日报</relationshipLabel>
        <relationshipName>Wus</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>workremark__c</fullName>
        <label>工作内容</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>日报</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>remark__c</columns>
        <columns>request__c</columns>
        <columns>workremark__c</columns>
        <columns>enddate__c</columns>
        <columns>startdate__c</columns>
        <columns>kftask__c</columns>
        <columns>train__c</columns>
        <columns>validnum__c</columns>
        <columns>weekly__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <nameField>
        <displayFormat>MD-{YYYY}{MM}{0000000000}</displayFormat>
        <label>序号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>日报</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>